SONAR-9358 Display a first analysis spinner in the onboarding tutorial

--- a/sonar-core/src/main/resources/org/sonar/l10n/core.properties
+++ b/sonar-core/src/main/resources/org/sonar/l10n/core.properties
@@ -3020,3 +3020,8 @@ onboarding.analysis.sq_scanner.text.mac=And add the <code>bin</code> directory t
 onboarding.analysis.sq_scanner.execute=Execute the SonarQube Scanner from your computer
 onboarding.analysis.sq_scanner.execute.text=Running a SonarQube analysis is straighforward. You just need to execute the following commands in your project's folder.
 onboarding.analysis.sq_scanner.docs=Please visit the <a href="http://redirect.sonarsource.com/doc/install-configure-scanner.html" target="_blank">official documentation of the SonarQube Scanner</a> for more details.
+
+onboarding.project_watcher.not_started=Once your project is analyzed, this page will refresh automatically.
+onboarding.project_watcher.in_progress=Analysis is in progress, please wait...
+onboarding.project_watcher.finished=Analysis is finished, redirecting...
+onboarding.project_watcher.failed=Something went wrong, please check the analysis logs.
